--- a/views/register.ejs
+++ b/views/register.ejs
@@ -45,10 +45,8 @@
             <span style="color: hsl(218, 81%, 75%)">Innovation School</span>
           </h1>
           <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%)">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Temporibus, expedita iusto veniam atque, magni tempora mollitia
-            dolorum consequatur nulla, neque debitis eos reprehenderit quasi
-            ab ipsum nisi dolorem modi. Quos?
+            “Education is the passport to the future, for tomorrow belongs to those who prepare for it today.”
+Malcolm X
           </p>
         </div>
   
