--- a/views/teacher.ejs
+++ b/views/teacher.ejs
@@ -55,10 +55,8 @@
                 <span style="color: hsl(218, 81%, 75%)">Innovation School</span>
               </h1>
               <p class="mb-4 opacity-70" style="color: hsl(218, 81%, 85%)">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                Temporibus, expedita iusto veniam atque, magni tempora mollitia
-                dolorum consequatur nulla, neque debitis eos reprehenderit quasi
-                ab ipsum nisi dolorem modi. Quos?
+                “Education is the passport to the future, for tomorrow belongs to those who prepare for it today.”
+Malcolm X
               </p>
             </div>
 
@@ -74,7 +72,7 @@
 
               <div class="card bg-glass">
                 <div class="card-body px-4 py-5 px-md-5">
-                  <form action="/headmaster" method="POST">
+                  <form action="/teacher" method="POST">
                     <!-- 2 column grid layout with text inputs for the first and last names -->
                     <div class="row">
                       <% if (messages.error) { %>
@@ -83,7 +81,7 @@
                       </div>
                       <% } %>
 
-                      <h1 class="mb-3 h3">Headmaster Portal</h1>
+                      <h1 class="mb-3 h3">Headmaster Portal for teachers</h1>
                     </div>
 
                     <!-- Name input -->
@@ -99,27 +97,6 @@
                       >
                     </div>
 
-                    <!--*****************radio buttons to separate students and teachers******************-->
-                    <div class="stu">
-                      <input
-                        type="radio"
-                        id="student"
-                        name="sub"
-                        value="student"
-                      />
-                      <label for="student">Student&nbsp;&nbsp;&nbsp;</label>
-                    </div>
-
-                    <div class="tea">
-                      <input
-                        type="radio"
-                        id="teacher"
-                        name="sub"
-                        value="teacher"
-                      />
-                      <label for="teacher">Teacher</label><br /><br />
-                    </div>
-
                     <!--*****************select buttons for teachers******************-->
                     <!-- Class input -->
                     <div class="form-outline mb-4">
@@ -129,17 +106,35 @@
                         id="form3Example4"
                         class="form-control"
                       />-->
-                      <label class="form-label" for="form3Example4"
-                        >Select class</label
-                      >
-                      <div class="cher"
-                      <select name="class" id="class">
-                        <option value="class1">&nbsp;Class-1</option>
-                        <option value="class2">Class-2</option>
-                        <option value="class3">Class-3</option>
-                        <option value="class4">Class-4</option>
-                      </select>
-                      </div>
+
+                      <input
+                        type="checkbox"
+                        id="sec"
+                        name="amber"
+                        value="Class-1"
+                      />
+                      <label for="amber"> Class-1</label><br />
+                      <input
+                        type="checkbox"
+                        id="sec"
+                        name="amber"
+                        value="Class-2"
+                      />
+                      <label for="jhon"> Class-2</label><br />
+                      <input
+                        type="checkbox"
+                        id="sec"
+                        name="amber"
+                        value="Class-3"
+                      />
+                      <label for="deep"> Class-3</label><br />
+                      <input
+                        type="checkbox"
+                        id="sec"
+                        name="amber"
+                        value="Class-4"
+                      />
+                      <label for="rumor"> Class-4</label><br /><br />
                     </div>
 
                     <!--*****************select buttons for teachers******************-->
@@ -150,51 +145,36 @@
                         id="form3Example4"
                         class="form-control"
                       />-->
-                      <label class="form-label" for="form3Example4"
-                        >Select class</label
-                      >
-                      <div class="cher"
-                      <select name="sec" id="sec">
-                        <option value="secA">&nbsp;Section A</option>
-                        <option value="secB">Section B</option>
-                        <option value="secC">Section C</option>
-                      </select>
-                      </div>
+                      <input
+                        type="checkbox"
+                        id="sec"
+                        name="skar"
+                        value="Sec A"
+                      />
+                      <label for="skar"> Sec A</label><br />
+                      <input
+                        type="checkbox"
+                        id="sec"
+                        name="skar"
+                        value="Sec B"
+                      />
+                      <label for="skar"> Sec B</label><br />
+                      <input
+                        type="checkbox"
+                        id="sec"
+                        name="skar"
+                        value="Sec C"
+                      />
+                      <label for="skar"> Sec C</label><br /><br />
                     </div>
-
-                    <!--*****************radio buttons for students******************-->
-                    <div class="dent">
-                      <input type="radio" id="cl" name="cl" value="cl" />
-                      <label for="class1">Class-1&nbsp;&nbsp;&nbsp;</label>
-
-                      <input type="radio" id="cl" name="cl" value="cl" />
-                      <label for="class2">Class-2&nbsp;&nbsp;&nbsp;</label>
-
-                      <input type="radio" id="cl" name="cl" value="cl" />
-                      <label for="class3">Class-3&nbsp;&nbsp;&nbsp;</label>
-
-                      <input type="radio" id="cl" name="cl" value="cl" />
-                      <label for="class4">Class-4&nbsp;&nbsp;&nbsp;</label>
-                      <br /><br />
-
-                      <!--*************radio buttons for sectioning students**************-->
-                      <input type="radio" id="sec" name="sec" value="sec" />
-                      <label for="sec">Section A&nbsp;&nbsp;&nbsp;</label>
-
-                      <input type="radio" id="sec" name="sec" value="sec" />
-                      <label for="sec">Section B&nbsp;&nbsp;&nbsp;</label>
-
-                      <input type="radio" id="sec" name="sec" value="sec" />
-                      <label for="sec">Section C&nbsp;&nbsp;&nbsp;</label>
-                    </div>
-                    <br /><br />
 
                     <!-- Submit button -->
                     <button
                       type="submit"
                       class="btn btn-primary btn-block mb-4"
                     >
-                      Submit
+                    Submit
+                    <!--<a href="/save" style="color: white; text-decoration: none;">Submit</a>-->
                     </button>
                   </form>
                 </div>
@@ -212,22 +192,5 @@
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
       crossorigin="anonymous"
     ></script>
-    <script>
-      var student = document.getElementsByClassName('stu')[0];
-      var teacher = document.getElementsByClassName('tea')[0];
-      var teacherIg = document.getElementsByClassName('cher')[];
-      var studentIg = document.getElementsByClassName('dent');
-
-      teacherIg.disabled = true;
-      studentIg.disabled = true;
-      
-      student.addEventListner('stu', function(event) {
-        teacherIg.disabled = !teacherIg.disabled;
-      });
-
-      teacher.addEventListner('tea', function(event) {
-        studentIg.disabled = !studentIg.disabled;
-      });
-    </script>
   </body>
 </html>
